# Oculus-Rift-Telepresence

./: LICENSE  README.md
GStreamer/: Gstreamer client.txt  Gstreamer server.txt  Gstreamer test.txt  Sound  dist.frag
OculusRiftClient/: CMakeLists.txt
OculusRiftClient/src/: main.cpp
ServoUDPServer/: CMakeLists.txt
ServoUDPServer/src/: main.cpp  server.cpp  server.h
ServoUDPServer/src/servoHandler/: servoHandler.cpp  servoHandler.h
